[metadata]
name = mask-generation
version = 0.0.1
description = build mask files for wyvern code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ly16302/mask
author = Liang Yang
author_email = liang.yang@cranfield.ac.uk
license =  Apache-2.0
license_file = LICENSE
keywords = f2py
